# MDIF

./: .gitignore  LICENSE  README.md  demo images.md  environment.yml  mdif.ipynb  pyproject.toml
app/: app.py  requirements.txt
data/: README.md
mdif/: evaluate.py  inference.py
mdif/models/: fusion_classifier.py  spatial_stream.py
mdif/preprocessing/: compute_features.py  signal_proc.py
mdif/training/: train_fusion.py  train_spatial.py
models/: fusion_classifier.py  spatial_stream.py
notebooks/: mdif.ipynb  verift_feat.ipynb
src/: evaluate.py
src/preprocessing/: compute_features.py  dataset_loader.py  signal_proc.py
src/training/: train_fusion.py  train_spatial.py
weights/: fusion_head_best.pth  fusion_head_best_old.pth  spatial_backbone_best.pth  spatial_backbone_best_old.pth
